<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dip">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskTitle"
            android:textSize="24sp"
            android:paddingRight="10dip"/>
        <EditText 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addTitle"
            android:hint="@string/addTitle"
            android:inputType="text"/>"
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choosePhase"
            android:layout_marginBottom="10dip"
            android:textSize="24sp"
            android:id="@+id/phase"></Button>

        <Button
            android:id="@+id/editsteps"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dip"
            android:text="@string/editSteps"
            android:textSize="24sp" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:text="@string/savechanges"
            android:id="@+id/savechanges" />

    </LinearLayout>

</RelativeLayout>